tests/cases/compiler-development/artifact/errors/diagnostic-borrow-aggregate-enum-payload.diagnostic
diagnostic error code=O0001 family=ownership message="borrow-carrying aggregate enum payloads are not supported yet; store the borrow outside the enum payload, got View" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-aggregate-enum-payload.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-aggregate-enum-payload.ari" bytes=111
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-aggregate-enum-payload.ari" line=7 column=12 end_line=7 end_column=16 byte_start=68 byte_end=72 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-borrow-aggregate-enum-payload.ari:7:12\n   |\n 7 |   Borrowed(View),\n   |            ^^^^"
